2008-03-07  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdMkpatchMain): Remove j or z
	option check. Convert tar options to --long format.
	(CygbuildTarDirectory): Fix tar directory detection. If there
	were files that conatined spaces, the function failed. Moving
	$(NF) to column $6 fixes this. Remove j or z option check.
	Convert tar options to --long format.
	(CygbuildInstallFixDocdirInstall): Convert tar options to
	--long format.
	(CygbuildCmdDownloadCygwinPackage): Remove j or z option check.

2008-03-06  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::Contributing packages): Fix
	ITP message example.
	(GPG EXAMPLES): Cosmetic chnages.

	* bin/cygbuild.sh:
	-- Change Verb() calls to Warn() calls near [WARN] messages.
	(CygbuildCmdAllMain): Remove interactive
	step if signatures failed.
	(top level): Chnage var+value into POSIX var:+value format.
	Change -s (short) options in cat, diff ln, mv, rm, tar etc. to
	--long options.
	(CygbuildCmdInstallCheckShFile): New.
	(CygbuildCmdInstallCheckShellFiles): Add cases for Bourne and
	Bourne-Again.
	(CygbuildCmdInstallCheckPythonFile): Add arg FILE check.
	(CygbuildCmdInstallCheckPerlFile): Add arg FILE check.
	(CygbuildTarDirectory): Remove subshell from `wc' call. Remove
	`cut' command.
	(CygbuildInstallFixInterpreterPerl): Remove extra `set' command
	near `wc'.
	(CygbuildCmdAllMain): Add back signature verification and
	interactive question.
	(CygbuildCmdGPGVerifyMain): Add support for OPTION_FORCE.
	(CygbuildPatchList): Simplify call to find command.
	(CygbuildBootVariablesGlobalMain): Remove call to
	`CygbuildIsGbsCompat'. Always call
	`CygbuildBootVariablesGlobalShareMain'
	(CygbuildBootVariablesId): If GBS, set correct CYGBUILD_PROG_LIBPATH.
	(CygbuildIsDestdirSupported): Return immediately if no perl module.
	Remove unneeded variable `out'.
	(CygbuildTreeSymlinkCopy): Ignore version control directories.